--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,13 @@ repositories {
     jcenter() 
 }
 
+jacocoTestReport {
+    reports {
+        xml.enabled true
+        html.enabled true
+    }
+}
+
 dependencies {
     testImplementation 'junit:junit:4.13' 
 
