--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,11 @@ jacocoTestReport {
         xml.enabled true
         html.enabled true
     }
+    afterEvaluate {
+        classDirectories.setFrom(files(classDirectories.files.collect {
+            fileTree(dir: it, exclude: ['paaohjelma/**'])
+        }))
+    }
 }
 
 dependencies {
@@ -21,11 +26,11 @@ dependencies {
 }
 
 application {
-    mainClass = 'ohtu.ohtuvarasto.Main'
+    mainClass = 'paaohjelma.Main'
 }
 
 jar {
     manifest {
-        attributes 'Main-Class': 'ohtu.ohtuvarasto.Main'
+        attributes 'Main-Class': 'paaohjelma.Main'
     }
 }
